<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="@dimen/container_padding"
            tools:context=".activities.ClientFormActivity">

            <TextView
                android:id="@+id/heading_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/provakil_client_form"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/client_details_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/heading_tv"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_person_black_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="@string/client_personal_details"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/client_details_group"
                android:hint="@string/first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLength="30"
                    android:textSize="@dimen/text_input_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_name_til"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/last_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLength="30"

                    android:textSize="@dimen/text_input_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/client_code_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/last_name_til"
                android:hint="@string/client_code">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/client_code_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="20"
                    android:textSize="@dimen/text_input_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_line_one_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/client_code_til"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/address_line_1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address_line_one_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:maxLength="50"
                    android:textSize="@dimen/text_input_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_line_two_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/address_line_one_til"
                android:hint="@string/address_line_2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address_line_two_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:maxLength="35"
                    android:textSize="@dimen/text_input_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/city_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/address_line_two_til"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/city">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/city_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:maxLength="35"
                    android:textSize="@dimen/text_input_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/states_spinner"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pin_til"
                android:layout_marginTop="6dp"
                android:background="@drawable/spinner_background"
                android:dropDownSelector="@drawable/ic_keyboard_arrow_down_black_24dp"
                android:minHeight="30dp"
                android:spinnerMode="dropdown" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pin_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/city_til"
                android:hint="@string/pin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pin_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="6"
                    android:textSize="@dimen/text_input_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/address_type_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/states_spinner"
                android:layout_marginTop="8dp"
                android:text="@string/address_type"
                android:textColor="@color/colorPrimary" />

            <RadioGroup
                android:id="@+id/home_type_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/address_type_label"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/home_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/home" />

                <RadioButton
                    android:id="@+id/office_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/office" />
            </RadioGroup>

            <TextView
                android:id="@+id/contact_info_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/home_type_rg"
                android:layout_marginTop="8dp"
                android:text="@string/contact_info"
                android:textColor="@color/colorPrimary" />

            <GridLayout
                android:id="@+id/contact_info_llo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/contact_info_label"
                android:columnCount="2">

                <Spinner
                    android:id="@+id/contact_type_spinner"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:dropDownWidth="wrap_content"
                    android:entries="@array/city_list"
                    android:minWidth="100dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contact_number"
                    android:padding="0dp">

                    <EditText
                        android:id="@+id/contact_number_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:textSize="@dimen/text_input_size" />
                </com.google.android.material.textfield.TextInputLayout>

            </GridLayout>

            <LinearLayout
                android:id="@+id/advance_details_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/contact_info_llo"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_advance_detials_24dp_black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="@string/advance_details"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />
            </LinearLayout>


            <Spinner
                android:id="@+id/operational_state_spinner"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/advance_details_group"
                android:layout_marginTop="6dp"
                android:background="@drawable/spinner_background"
                android:dropDownSelector="@drawable/ic_keyboard_arrow_down_black_24dp"
                android:minHeight="30dp"
                android:spinnerMode="dropdown" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/extra_details_til"
                android:hint="@string/extra_details"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_below="@id/operational_state_spinner"
                >

                <EditText
                    android:id="@+id/extra_details_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:maxLength="250"
                    android:maxLines="4"
                    android:padding="8dp"
                    android:textSize="@dimen/text_input_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/extra_details_til"
                android:layout_marginTop="16dp"
                android:text="@string/submit" />

        </RelativeLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/masked"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/slide_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:padding="16dp"
            android:src="@drawable/ic_arrow_downward_black_24dp" />
    </FrameLayout>
</FrameLayout>
